--- a/day 1/username_password.html
+++ b/day 1/username_password.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form 2</title>
     <link rel="stylesheet" href="username_password.css">
 </head>
+
 <body>
     <div class="parent">
         <div class="child">
             <div class="form">
-            <h3 style="text-align: center;font-size: 40px;">Log in</h3><br><br>
-            <label for="name">Enter userneme:</label>
-            <input type="text" name="" id="" placeholder="Userneme" required>
-            <br><br><br><br>
-            <label for="email">Password:</label>
-            <input type="email" name="" id=""Email placeholder="Password" required><br><br><br><br>
-            <div style="text-align: center;">
-            <button class="submit" >Submit</button></div>
+                <h3 style="text-align: center;font-size: 40px;">Log in</h3><br><br>
+                <label for="name">Enter userneme:</label>
+                <input type="text" name="" id="" placeholder="Userneme" required>
+                <br><br><br><br>
+                <label for="email">Password:</label>
+                <input type="email" name="" id="" Email placeholder="Password" required><br><br><br><br>
+                <div style="text-align: center;">
+                    <button class="submit">Submit</button>
+                </div>
+            </div>
         </div>
     </div>
-    </div>
 </body>
+
 </html>
