--- a/day 4/iterative_13.html
+++ b/day 4/iterative_13.html
@@ -8,21 +8,20 @@
 <body>
     <script>
         //Generate the first n prime numbers using a for loop, where n is provided by the user.
-        let n=prompt("Enter a number:")
-        n=Number.parseInt(n)
-        let count=0
-        let isPrime=true
-        for(let i=2;count<n;i++){
-            for(let j=2;j<i-1;j++){
+        let n=parseInt(prompt("Enter a number:"));
+        console.log(n);
+        let count=0;
+        for(let i=2;count < n;i++){
+            let isPrime=true;
+            for(let j=2;j<= Math.sqrt(i);j++){
                 if(i%j===0){
                     isPrime=false
                     break;
                 }
             }
             if(isPrime){
-                document.write(i)
-                document.write("<br>")
-                count++
+                document.write(i + "<br>")
+                count++;
             }
         }
        
